<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_message"
        android:title="@string/chats" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_add_photo"
        android:title="@string/send_prescription" />

    <item
        android:id="@+id/navigation_categories"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/title_categories" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/title_profile" />

</menu>