<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/_5sdp"
    tools:context=".ui.other.dialogs.ChangeSoundDialogFragment">

    <!--Title -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_2sdp"
        android:text="@string/pick_a_favorite_sound"
        android:textAlignment="center"
        android:textSize="@dimen/_17ssp"
        android:textStyle="bold" />

    <!--Second Field-->
    <RadioGroup
        android:id="@+id/soundsRadioGroup"
        style="@style/Widget.App.RadioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp">

        <RadioButton
            android:id="@+id/longSoundRadioButton"
            style="@style/Widget.App.RadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sound_name_long"
            tools:ignore="VisualLintButtonSize" />

        <RadioButton
            android:id="@+id/coolSoundRadioButton"
            style="@style/Widget.App.RadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sound_name_cool"
            tools:ignore="VisualLintButtonSize" />

        <RadioButton
            android:id="@+id/talkingSoundRadioButton"
            style="@style/Widget.App.RadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sound_name_talking"
            tools:ignore="VisualLintButtonSize" />

        <RadioButton
            android:id="@+id/bellSoundRadioButton"
            style="@style/Widget.App.RadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sound_name_bell"
            tools:ignore="VisualLintButtonSize" />

    </RadioGroup>
    <!--Button-->
    <Button
        android:id="@+id/saveUserSettingsBtn"
        style="@style/PinkButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        tools:ignore="TextContrastCheck,VisualLintButtonSize" />

</LinearLayout>