<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

<!--    <fragment-->
<!--        android:id="@+id/navigation_map"-->
<!--        android:name="dev.anonymous.eilaji.ui.other.map.MapFragment"-->
<!--        android:label="@string/pharmacies_map"-->
<!--        tools:layout="@layout/fragment_map" />-->


    <fragment
        android:id="@+id/navigation_home"
        android:name="dev.anonymous.eilaji.ui.user_interface.home.HomeFragment"
        android:label="@string/delivery_to_your_location"
        tools:layout="@layout/fragment_home" />

    <!--TODO If you have multiple navigation graph XML files, you can specify the correct graph file and destination in the navigation action. Here's how you can do it    -->
    <!--TODO Omar you can add a Animation in the highlighted comment    -->
   <!-- <action
        android:id="@+id/action_homeFragment_to_searchFragment"
        app:destination="@id/navigation_search"/>
    <include app:graph="@navigation/additional_screens_navigation" />-->
    <!--app:enterAnim="@anim/slide_in_right"
    app:exitAnim="@anim/slide_out_left" -->



    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="dev.anonymous.eilaji.ui.user_interface.dashboard.DashboardFragment"
        android:label="@string/chats"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="dev.anonymous.eilaji.ui.user_interface.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_categories"
        android:name="dev.anonymous.eilaji.ui.user_interface.categories.CategoriesFragment"
        android:label="@string/categories"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="dev.anonymous.eilaji.ui.user_interface.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>