<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_change_reminder_sound_dialog"
    android:orientation="vertical"
    android:padding="@dimen/_15sdp"
    tools:context=".ui.other.dialogs.permissions.RequestPermissionsDialogFragment">

    <!--Title -->
    <TextView
        android:id="@+id/request_permissions_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_10sdp"
        android:padding="@dimen/_2sdp"
        tools:text="@string/pick_a_favorite_sound"
        android:textAlignment="center"
        android:textColor="?attr/colorOnSurface"
        android:textSize="@dimen/_17ssp"
        android:textStyle="bold" />

    <!--Button Allow-->
    <Button
        android:id="@+id/allowPermissions"
        style="@style/PrimaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/allow"
        tools:ignore="TextContrastCheck,VisualLintButtonSize" />
    <!--Button Deny-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/denyPermissions"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deny"
        app:cornerRadius="12dp"
        tools:ignore="TextContrastCheck,VisualLintButtonSize" />

</LinearLayout>