<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/pink_light"
    android:padding="15dp"
    tools:context=".ui.other.dialogs.ImagePickerDialogFragment">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/choose_the_image_s_location"
        android:textAlignment="center"
        android:textColor="#B3004664"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btn_gallery"
        style="@style/PinkButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/gallery"
        android:textColor="#0D47A1"
        app:layout_constraintBottom_toTopOf="@id/btn_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize,TextContrastCheck" />

    <Button
        android:id="@+id/btn_camera"
        style="@style/PinkButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:textColor="#0D47A1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>